# SkyRL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  INSTALL.md  README.md  format.sh  how_to_run_skyrl_sql.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cpu_ci.yaml
docker/: Dockerfile
examples/grpo_trainer/: run_sglang.sh
examples/sky/: README.md  run_skyrl_agent_oh7b_s1.sh  run_skyrl_agent_oh7b_s2.sh  run_skyrl_agent_qwen14b_t.sh  run_skyrl_agent_qwen8b_nt.sh
scripts/: model_merger.py
skyagent/: .env.sql  .env.swebench  README.md  pyproject.toml
skyagent/docker/: Dockerfile.skyrl
skyagent/examples/generation/: run_sglang.sh
skyagent/examples/sky/sql/: README.md  run_skyrl_sql.sh
skyagent/tests/: test_reward.py
skyagent/verl/trainer/: main_ppo.py
skyagent/verl/trainer/config/: ppo_trainer.yaml
skyagent/verl/trainer/ppo/: core_algos.py
skyagent/verl/utils/: torch_functional.py
skyagent/verl/utils/logger/: aggregate_logger.py
skyagent/verl/utils/reward_score/: synsql_verifier.py
skyagent/verl/utils/reward_score/openhands_swebench/: __init__.py
skyagent/verl/utils/reward_score/synsql/: utils.py
skyagent/verl/workers/agentic/: async_rollout.py  fsdp_sgl.py
skyagent/verl/workers/agentic/llm_sql_agent/: sqlact.py  utils.py
skyagent/verl/workers/agentic/swe_agent/: codeact.py
skyagent/verl/workers/reward_manager/: __init__.py  swebench.py
skygym/: pyproject.toml
skygym/skygym/: __init__.py  core.py  (+1 more)
skyrl-gym/: README.md  pyproject.toml
skyrl-train/: .env.example  README.md  pyproject.toml  skygym  skyrl-gym
skyrl-train/docs/: build.sh  conf.py  index.rst
skyrl-train/docs/api/: data.rst  entrypoint.rst  env.rst  generator.rst  tools.rst  trainer.rst
skyrl-train/docs/checkpointing-logging/: checkpointing.rst
skyrl-train/docs/configuration/: config.rst  placement.rst
skyrl-train/docs/datasets/: dataset-preparation.rst
skyrl-train/docs/examples/: async.rst  multi_turn_text2sql.rst  new_env.rst  ppo.rst  remote_server.rst  training_backends.rst
skyrl-train/docs/getting-started/: installation.rst  overview.rst  quickstart.rst
skyrl-train/docs/recipes/: skyrl-sql.rst
skyrl-train/docs/troubleshooting/: troubleshooting.rst
skyrl-train/docs/tutorials/: async.rst  new_env.rst  tools_guide.rst
skyrl-train/examples/async/: README.md  async_run_gsm8k.sh  async_trainer.py  main_async.py
skyrl-train/examples/gsm8k/: gsm8k_dataset.py  run_32b_gsm8k.sh  run_gsm8k.sh
skyrl-train/examples/livecodebench/: lcb.md  lcb_dataset.py  lcb_download.py  run_lcb.sh
skyrl-train/examples/multiply/: env.py  main_multiply.py  multiply_dataset.py  run_multiply.sh
skyrl-train/examples/ppo/: run_ppo.sh
skyrl-train/examples/remote_inference_engine/: run_remote.sh  run_vllm_server.sh
skyrl-train/examples/remote_llm_endpoint/: run_remote.sh  run_vllm_server.sh
skyrl-train/examples/search/: run_search.sh  search.md  searchr1_dataset.py
skyrl-train/examples/search/retriever/: retrieval_launch.sh  retrieval_server.py
skyrl-train/examples/skyrl_sql/: run_skyrl_sql.sh
skyrl-train/examples/text_to_sql/: run_skyrl_sql.sh  run_sql_deepspeed.sh  run_sql_fsdp.sh  run_sql_fsdp_2node.sh  sql.md  sql_dataset.py
skyrl-train/examples/training_backends/: run_no_seq_pack.sh
skyrl-train/examples/training_backends/deepspeed/: run_deepspeed.sh
skyrl-train/examples/training_backends/fsdp/: run_fsdp.sh  run_fsdp2.sh
skyrl-train/scripts/: launch_multiple_remote_servers.py  multi_node_nccl_test.py
skyrl-train/scripts/full_context/: README.md  __init__.py  main_full_ctx.py  run_full_ctx.sh  trainer_full_ctx.py
skyrl-train/skyrl_train/: models.py  trainer.py  training_batch.py  weights_manager.py
skyrl-train/skyrl_train/config/: ppo_base_config.yaml
skyrl-train/skyrl_train/config/deepspeed_config/: eval.yaml  train.yaml
skyrl-train/skyrl_train/config/skyrl_gym_config/: default.yaml
skyrl-train/skyrl_train/dataset/: __init__.py  dataset.py  preprocess.py  replay_buffer.py
skyrl-train/skyrl_train/distributed/: deepspeed_strategy.py  dispatch.py  fsdp_strategy.py  fsdp_utils.py  strategy.py  utils.py
skyrl-train/skyrl_train/distributed/ulysses/: __init__.py  monkey_patch.py  utils.py
skyrl-train/skyrl_train/entrypoints/: main_base.py
skyrl-train/skyrl_train/generators/: __init__.py  base.py  skygym_generator.py  skyrl_gym_generator.py  utils.py
skyrl-train/skyrl_train/inference_engines/: base.py  inference_engine_client.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  utils.py
skyrl-train/skyrl_train/inference_engines/sglang/: sglang.patch  sglang_server.py
skyrl-train/skyrl_train/inference_engines/vllm/: vllm_engine.py  vllm_server.py
skyrl-train/skyrl_train/utils/: __init__.py  ppo_utils.py  torch_utils.py  tracking.py  trainer_utils.py  utils.py
skyrl-train/skyrl_train/workers/: worker.py  worker_utils.py
skyrl-train/skyrl_train/workers/deepspeed/: deepspeed_worker.py
skyrl-train/skyrl_train/workers/fsdp/: fsdp_worker.py
skyrl-train/tests/cpu/: __init__.py  test_train_batch.py  test_trainer.py  test_trainer_utils.py
skyrl-train/tests/cpu/algorithms/: test_losses.py
skyrl-train/tests/cpu/dataset/: test_dataset.py  test_preprocess.py
skyrl-train/tests/cpu/distributed/: test_dispatch.py  test_ulysses.py
skyrl-train/tests/cpu/generators/: test_skygym_generator.py  test_skygym_generator_chat_templating.py  test_skyrl_gym_generator.py  test_skyrl_gym_generator_chat_templating.py
skyrl-train/tests/cpu/models/: test_models.py
skyrl-train/tests/cpu/utils/: test_ppo_utils.py  test_torch_utils.py
skyrl-train/tests/gpu/: runner.py  test_engine_generation.py  test_generator.py  test_grpo_sp_sanity.py  test_models.py  test_policy_vllm_e2e.py  test_ppo_train.py  test_save_load_ckpt.py  test_save_load_model.py  test_skyrl_gym_generator.py  test_train_batch.py  test_trainer_full_checkpointing.py  test_training_step.py  test_worker_offload.py  utils.py
skyrl-train/tests/sglang/: test_policy_sglang_e2e.py
verl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+66 files in other folders)
